feat: no records text

--- a/src/styles/components/_records.scss
+++ b/src/styles/components/_records.scss
@@ -1,5 +1,9 @@
-#records{
+#records {
     margin-top: 25px;
+
+    #noRecordsText {
+        text-align: center;
+    }
 
     .record {
         padding: 10px;
