--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,7 +10,7 @@ body {
     background-color: #181a1d;
     color: #ffffff;
     font-family: "Segoe UI";
-    margin: 10px;
+    padding: 15px;
 }
 
 
